# codeforces-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/codeforces_cli/: cli.py  client.py  config.py  parser.py  runner.py  utils.py
tests/: test_cli.py  test_client.py  test_config.py  test_parser.py  test_runner.py  test_utils.py
