[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeforces-cli"
version = "0.1.0"
description = "CLI tool for interacting with Codeforces"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
cf = "codeforces_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codeforces_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
